# op-mcp-mod

./: .env.example  Dockerfile  Makefile  README.md  complete_guide.md  launch_mcp_stdio.sh  mcp-config.json  mcp-inspector-config.json  pyproject.toml  requirements.txt  test_imports.py  validate_setup.py  vscode_test.py
.cursor/rules/: architecture.mdc  modelcontextprotocol.mdc  python.mdc
.github/workflows/: publish.yaml
src/: auth.py  config.py  enums.py  google_auth.py  health.py  main.py  monitoring.py  remote_server.py  server.py  testing.py
src/openmetadata/: __init__.py  bots.py  charts.py  classifications.py  client_performance.py  containers.py  dashboards.py  database.py  domains.py  enhanced_client.py  events.py  glossary.py  lineage.py  metrics.py  mlmodels.py  openmetadata_client.py  pipelines.py  policies.py  reports.py  roles.py  schema.py  search.py  services.py  table.py  tags.py  teams.py  test_cases.py  test_suites.py  topics.py  usage.py  users.py
templates/: dashboard.html
